Pagination with full Sorting on all columns
DisplayTag used. Need more configuration for exporting files, should
paginize only a certain amount of pages from database and not whole
table.

--- a/Lab4Struts2/resources/global_ro.properties
+++ b/Lab4Struts2/resources/global_ro.properties
@@ -10,7 +10,7 @@ global.univId = Id Universitate
 global.cursId = Id Curs
 global.profesorId = Id Profesor
 global.studentId = Id Student
-global.studcurs = ID Student-Curs
+global.studcursId = ID Student-Curs
 global.denum = Denumire
 global.name = Prenume
 global.lname = Nume
