Struts2: changes listed below
1. Reduces the size of js & jsp's
2. Modified Hibernate Util
3. Extracted logic from low layer
4. DAO doesn't use generics
5. Doesn't use model driven
6. No transactions for select operations
7. Classic interface with "Save" or "Cancel"

--- a/Lab4Struts2/src/global_ro.properties
+++ b/Lab4Struts2/src/global_ro.properties
@@ -19,3 +19,4 @@ global.email = Email
 global.group = Grupa
 global.phone = Telefon
 global.submit = Seteaza
+global.notFound = Objectul nu a fost gasit, nu poate fi sters sau editat
